// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-customer-details has a loading state 1`] = `
<sc-customer-details>
  <mock:shadow-root>
    <sc-dashboard-module class="customer-details">
      <span slot="heading">
        Billing Details
      </span>
      <sc-card no-padding="">
        <sc-stacked-list>
          <sc-stacked-list-row mobile-size="0" style="--columns: 2;">
            <div style="padding: 0.5em;">
              <sc-skeleton style="width: 30%; margin-bottom: 0.75em;"></sc-skeleton>
              <sc-skeleton style="width: 20%; margin-bottom: 0.75em;"></sc-skeleton>
              <sc-skeleton style="width: 40%;"></sc-skeleton>
            </div>
          </sc-stacked-list-row>
        </sc-stacked-list>
      </sc-card>
    </sc-dashboard-module>
  </mock:shadow-root>
  <span slot="heading">
    <slot-fb name="heading">
      Test heading
    </slot-fb>
  </span>
</sc-customer-details>
`;

exports[`sc-customer-details has an error state 1`] = `
<sc-customer-details>
  <mock:shadow-root>
    <sc-dashboard-module class="customer-details" error="testmessage">
      <span slot="heading">
        Billing Details
      </span>
      <sc-card no-padding="">
        <sc-stacked-list>
          <slot name="empty">
            You are not a customer.
          </slot>
        </sc-stacked-list>
      </sc-card>
    </sc-dashboard-module>
  </mock:shadow-root>
  <span slot="heading">
    <slot-fb name="heading">
      Test heading
    </slot-fb>
  </span>
</sc-customer-details>
`;

exports[`sc-customer-details renders 1`] = `
<sc-customer-details>
  <mock:shadow-root>
    <sc-dashboard-module class="customer-details">
      <span slot="heading">
        Billing Details
      </span>
      <sc-card no-padding="">
        <sc-stacked-list>
          <sc-stacked-list-row mobilesize="480" style="--columns: 3;">
            <div>
              <strong>
                Billing Name
              </strong>
            </div>
            <div>
              test
            </div>
            <div></div>
          </sc-stacked-list-row>
          <sc-stacked-list-row mobilesize="480" style="--columns: 3;">
            <div>
              <strong>
                Billing Email
              </strong>
            </div>
            <div>
              test@test.com
            </div>
            <div></div>
          </sc-stacked-list-row>
          <sc-stacked-list-row mobilesize="480" style="--columns: 3;">
            <div>
              <strong>
                Billing Address
              </strong>
            </div>
            <div>
              line_1
line_2
city line, wi 53716
undefined
            </div>
          </sc-stacked-list-row>
          <sc-stacked-list-row mobilesize="480" style="--columns: 3;">
            <div>
              <strong>
                Phone
              </strong>
            </div>
            <div>
              1234567890
            </div>
            <div></div>
          </sc-stacked-list-row>
        </sc-stacked-list>
      </sc-card>
    </sc-dashboard-module>
  </mock:shadow-root>
  <span slot="heading">
    <slot-fb name="heading">
      Showing Customer Info
    </slot-fb>
  </span>
</sc-customer-details>
`;
